--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT = "3000"
-URI = "mongodb+srv://moni:1M2o3n4i@todo.jtzrgec.mongodb.net/?retryWrites=true&w=majority"
+PORT = 3000
+URI = mongodb+srv://moni:1M2o3n4i@todo.jtzrgec.mongodb.net/?retryWrites=true&w=majority
